Fix tratamientos spacing

--- a/css/style.css
+++ b/css/style.css
@@ -652,7 +652,7 @@ ul {
 	header and icon box element
 ------------------------------------*/
 .service {
-	margin-bottom: 90px;
+	margin-bottom: 20px;
 }
 
 .service,
